# open-gateway

./: Cargo.toml  Dockerfile  Makefile  README.md  config.example.toml  docker-compose.yml  wrangler.toml
src/: lib.rs  main.rs
src/api_key/: mod.rs
src/config/: mod.rs
src/health/: mod.rs
src/metrics/: mod.rs
src/proxy/: mod.rs
src/tui/: mod.rs
tests/: e2e_test.rs
