[package]
name = "open-gateway"
version = "0.1.0"
edition = "2021"
authors = ["pnstack"]
description = "A simple and fast gateway service with API key management and TUI monitor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npv2k1/open-gateway"

[[bin]]
name = "open-gateway"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http2"] }
http-body-util = "0.1"
bytes = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Configuration
toml = "0.8"

# TUI
ratatui = "0.24"
crossterm = "0.27"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.0"
